style: fix appearance of card on mobile screens

--- a/src/app/main/component/expeditions/expeditions.component.scss
+++ b/src/app/main/component/expeditions/expeditions.component.scss
@@ -102,6 +102,7 @@
 
   .expeditions {
     overflow: visible;
+    margin: 0 auto;
 
     &__title {
       @include h2-mobile($line-height: 35px);
